# alstom_finetuning

./: .gitignore  .rooignore  config.py  data_filtering.py  projectBrief.md  prompts.py  roo_task_jul-24-2025_6-25-20-pm.md  schema.py  structure.txt  word_processor_design.md
document_embedding_pipeline/: README.md  commit_history.txt  config.yaml  hard_negative_feature.md  main.py  prompt_for_building_features.md  pyproject.toml  spec.md
document_embedding_pipeline/_temp/: AZ8A-TRT-R010-005- Plan fiab_B.odt
document_embedding_pipeline/models/: qwen3-embed-0.6b
document_embedding_pipeline/src/: data_models.py  prompts.py
document_embedding_pipeline/src/pipeline/: base_processor.py  excel_processor.py  hard_negative_processor.py  word_processor.py
document_embedding_pipeline/src/scripts/: process_excel_demo.py  test_code.py  walk_word_pipeline.py
document_embedding_pipeline/src/services/: docling_service.py  llm_service.py  qdrant_service.py  unoserver_service.py
document_embedding_pipeline/src/tests/test_pipeline/: test_accept_changes.py  test_word_processor.py
document_embedding_pipeline/src/tests/test_services/: test_llm_service.py  test_qdrant_service.py  test_unoserver.py
document_embedding_pipeline/src/tests/test_utils/: test_logging_setup.py  test_markdown_heading_parser.py
document_embedding_pipeline/src/utils/: config_loader.py  logging_setup.py  markdown_heading_parser.py  state_manager.py  table_parsing.py
dspy_optimizer/: annotate_chunks.py  config.py  custom_lm.py  dspy_pipeline.py  dspy_signatures.py  fetch_chunks.py  optimize_pipeline.py  (+7 more)
(+24 files in other folders)
